tests/ui/limits/issue-55878.stderr
error[E0080]: values of the type `[u8; usize::MAX]` are too big for the current architecture
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
note: inside `std::mem::size_of::<[u8; usize::MAX]>`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
note: inside `main`
  --> $DIR/issue-55878.rs:7:26
   |
LL |     println!("Size: {}", std::mem::size_of::<[u8; u64::MAX as usize]>());
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant used
  --> $DIR/issue-55878.rs:7:26
   |
LL |     println!("Size: {}", std::mem::size_of::<[u8; u64::MAX as usize]>());
   |     ---------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^- in this macro invocation (#1)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)

note: erroneous constant used
  --> $DIR/issue-55878.rs:7:26
   |
LL |     println!("Size: {}", std::mem::size_of::<[u8; u64::MAX as usize]>());
   |     ---------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^- in this macro invocation (#1)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
